--- a/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTIndex.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTIndex.cshtml
@@ -9,16 +9,16 @@
 <div class="card">
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
-            Alerts AASPOT (guncylinder en SBCU bewaking)
+            Alerts AASPOT
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
         <p>
-            <a href="~/Alert/Alert/AASPOTAlertList" class="btn btn-primary btn-sm">AASPOTalerts &raquo;</a>AASPOT alerts
+            <a href="~/Alert/Alert/Listalerts?alertGroup=AASPOTvt" class="btn btn-primary btn-sm">AASPOTalerts &raquo;</a>AASPOT alerts
         </p>
         <p>
-            <a href="~/Alert/Alert/AASPOTAlertList?ActiveAlertOnly=true&h_alert-triggerCount-GreaterThan=1&h_alert-Rows=15" class="btn btn-warning btn-sm">AASPOTalerts Openalerts&raquo;</a>AASPOT Alerts OPEN state  EN meer dan 1 keer getriggerd
+            <a href="~/Alert/Alert/Listalerts?alertGroup=AASPOTvt&ActiveAlertOnly=true&h_alert-triggerCount-GreaterThan=1&h_alert-Rows=15" class="btn btn-warning btn-sm">AASPOTalerts Openalerts&raquo;</a>AASPOT Alerts OPEN state  EN meer dan 1 keer getriggerd
         </p>
 
         <h3>Control Limits </h3>
