--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Index.cshtml
@@ -21,7 +21,7 @@
     columns.Add(c => c.discription).Titled("discription");
     columns.Add(c => c.c_schedule.name).Titled("schedule");
     columns.Add(c => c.ordinal).Titled("ordinal");
-    columns.Add(c => c.enableSMS).Titled("enableSMS");
+    columns.Add(c => c.enableSMS).Titled("SMS");
     columns.Add(c => c.c_smsSystem.system).Titled("SMSsystem");
   //  columns.Add(c => c.smsOnRetrigger).Titled("smsOnRetrigger").Css("d-none d-lg-table-cell");
     columns.Add(c => c.id)
@@ -29,7 +29,7 @@
                 .Encoded(false)
                 .RenderedAs(c => MyFilters.IconActionLink(Url.Action("Edit", new { id = c.id }), "fas fa-pencil-alt", "", "Edit this trigger").ToHtmlString() +
                                  MyFilters.IconActionLink(Url.Action("Index", "h_alert", new { c_trigger_id = c.id }), "fas fa-eye", "", "Show h_alert").ToHtmlString() +
-                                 MyFilters.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt", "", "Delete").ToHtmlString() +
+                                 MyFilters.IconActionLink(Url.Action("Delete", new { id = c.id }), "fas fa-trash-alt text-danger", "", "Delete").ToHtmlString() +
                                  MyFilters.IconActionLink(Url.Action("RunAlertTrigger", new { triggerID = c.id }), "fas fa-fire", "", "Test fire",classes: "JQresultTriggerBtn").ToHtmlString()
                 ).Filterable(false);
 }).Filterable().Sortable().Empty("Did not find anything").Css("table-hover")
