--- a/EqUiWebUi/Views/Assets/Index.cshtml
+++ b/EqUiWebUi/Views/Assets/Index.cshtml
@@ -17,6 +17,8 @@
 }).Filterable().Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 30;
+    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
+    pager.ShowPageSizes = true;
 }).Empty("Did not find anything").Css("table-hover")
 
 @section scripts{
