--- a/EqUiWebUi/Views/c_datasource/Index.cshtml
+++ b/EqUiWebUi/Views/c_datasource/Index.cshtml
@@ -25,7 +25,9 @@ columns.Add(c => c)
                     ).Filterable(false);
 }).Filterable().Sortable().Pageable(pager =>
 {
-    pager.RowsPerPage = 10;
+    pager.RowsPerPage = 30;
+    pager.PageSizes = new Dictionary<Int32, String> { { 0, "All" }, { 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
+    pager.ShowPageSizes = true;
 }).Empty("Did not find anything").Css("table-hover")
 
 <hr />
