--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/CurrentTipstatus.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/CurrentTipstatus.cshtml
@@ -36,6 +36,11 @@
             requestType: 'get', // Ajax grid request type
             reload: true, // Grid reload indicator
             rowClicked: function (row, data, e) {
+                //ignore clicks not on td
+                console.log(e.target.tagName);
+                if (e.target.tagName.toUpperCase() != 'TD') {
+                    return;
+                }
                 $('#MyModal').removeData('bs.modal');
                 $('#MyModal').modal({ show: true });
                 var urlTipinfo = '@Url.Action("_Tipinfo")?location=' + encodeURIComponent(data["robot"]) + '&tool_nr=' + encodeURIComponent(data["tool_-nr"]);
