--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_Tipinfo.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/_Tipinfo.cshtml
@@ -65,7 +65,11 @@
             sourceUrl: '@Url.Action("_TipLifeExpectationsGrid", new { location = ViewBag.location, tool_nr = ViewBag.tool_nr })', // Grid source url string
             requestType: 'get', // Ajax grid request type
             reload: true, // Grid reload indicator
-             rowClicked: function (row, data, e) {
+            rowClicked: function (row, data, e) {
+                //ignore clicks not on td
+                if (e.target.tagName.toUpperCase() != 'TD') {
+                    return;
+                }
                 //if row already has this clase close the modal
                 if ($(row).hasClass("bg-info")) {
                     $("#placeholder").remove();
