--- a/EqUiWebUi/Views/Error/Index.cshtml
+++ b/EqUiWebUi/Views/Error/Index.cshtml
@@ -7,7 +7,7 @@
 
     <p></p>
 
-    <div class="card">
+    <div class="card" id="Error">
         <h4>ERROR</h4>
         <div class="card-body">
             <p>
@@ -19,7 +19,7 @@
             </p>
 
             <p>
-                <button class="btn btn-primary btn-danger" onclick="goback()" type="button"><<< Back</button>
+                <button class="btn btn-primary btn-danger" onclick="window.history.back()" type="button"><<< Back</button>
             </p>
         </div>
     </div>
@@ -28,13 +28,10 @@
 
 
 <script>
-    function goback() {
-        window.history.back();
-    }
-    //reload afhter 1 min
+    //reload after 1 min
     setTimeout(
         function () {
             console.log('try reload page');
-            goback();
+            window.history.back();
         }, 1000*60);
 </script>
