--- a/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
@@ -93,7 +93,7 @@
         //simulate click on first row so that the details load automatic IF ROWCOUNT == 1
         if ($('[data-name="h_alert"]>table>tbody>tr').length == 1) {
 
-            $('[data-name="h_alert"]>table>tbody>tr:first').trigger('click');
+            $('[data-name="h_alert"]>table>tbody>tr>td:first').trigger('click');
         }
 
         //handle inline set state
