--- a/EqUiWebUi/Areas/Welding/Views/Launch/DoubleSpotCheck.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Launch/DoubleSpotCheck.cshtml
@@ -9,26 +9,25 @@
 
 @Html.Grid(Model).Named("DoubleSpotCheck").Build(columns =>
 {
-    columns.Add(c => c.TimerName).Titled("TimerName");
-    columns.Add(c => c.WeldProgram).Titled("WeldProgram");
-    columns.Add(c => c.SpotName).Titled("Spotname");
- 
+    columns.Add(c => c.Name).Titled("TimerName").InitialSort(GridSortOrder.Desc);
+    columns.Add(c => c.SpotName).Titled("spotName");
+    columns.Add(c => c.weldProgNo).Titled("ProgramNbr");
+    columns.Add(c => "double spot in weldtimer!!").Titled("text");
+
 
 
 }).Css("css-classes").AppendCss("table-hover").Filterable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
-    pager.PageSizes = new Dictionary<Int32, String>
-    { { 0, "All" } };
-    //{ 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
-    pager.ShowPageSizes = true;
-    }
-    ).Sortable();
 
-    @section scripts{
-        <script>
-            //full with screen
-            $("#allcontent").removeClass("body-content");
-            $("#allcontent").removeClass("container");
-        </script>
-    }
+}
+    ).Sortable().Css("table-hover").RowCss(model => model.Name != null ? "ani_PulseBlueRepeat" : "");
+
+@section scripts{
+    <script>
+        //full with screen
+        $("#allcontent").removeClass("body-content");
+        $("#allcontent").removeClass("container");
+    </script>
+}
+
