--- a/EqUiWebUi/Areas/Welding/Views/Ultralog/GetControlPlanPicture.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Ultralog/GetControlPlanPicture.cshtml
@@ -1,30 +1,44 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "GetControlPlanPicture";
 }
-
 <h5>GetControlPlanPicture</h5>
-<div class="card-body" style="min-width: 375px">
-    <canvas id="outputCanvas" style="background-image:url('/Content/images/Pic2225.png'); background-size: 100% 100%;"></canvas>
-</div>
 
+<div class="card-body"  style="min-width: 375px; max-width:1000px;">
+    <div id="ControlPicturePlaceHolder"></div>
+    <canvas id="outputCanvas" class="ControlPicture" style="background-size: 100% 100%;"></canvas>
+</div>
+<div class="btn btn-primary" id="btn_next">Click to start</div>
 
 <script src="~/Scripts/d3/d3.js"></script>
 <script src="~/Scripts/d3/Chart.bundle.js"></script>
 <script>
+    //global vars
+    var ControlPlanChart; 
+    var dataPayload;
+    var ActiveItem = 0;
     //full with screen
     $("#allcontent").removeClass("body-content");
     $("#allcontent").removeClass("container");
 
+    //function to build controlplan chart
     function buildControlPicture(dataPayload) {
         var ctx = document.getElementById("outputCanvas").getContext('2d');
-        var myChart = new Chart(ctx, {
+        ControlPlanChart = new Chart(ctx, {
             type: 'scatter',
             data: {
-                datasets: [{
-                    data: dataPayload[1],
-                    backgroundColor: 'rgba(0, 255, 0, 1)'
-                }
+                datasets: [
+                    { //dataset for active control point
+                        data: null,
+                        backgroundColor: 'rgba(255, 0, 0, 1)',
+                        pointRadius: 10,
+                        pointHoverRadius: 15
+                    },
+                    { //dataset to show all control points
+                        data: dataPayload[1],
+                        backgroundColor: 'rgba(0, 255, 0, 1)',
+                        pointRadius: 5,
+                        pointHoverRadius: 10
+                    }
                 ]
             },
             options: {
@@ -64,14 +78,34 @@
         data: {
             //procedure parms
         },
-        success: function (dataPayload) {
-            console.log(dataPayload);
-            $('#outputCanvas').css('background-image', 'url(' + dataPayload[0].Picture + ')');
+        success: function (returnValue) {
+            //store payload as global var
+            dataPayload = returnValue;
+            //create image as a style.
+            var style = document.createElement('style');
+            style.type = 'text/css';
+            style.innerHTML = '.ControlPicture {  background-image: url("data:image/png;base64, ' + dataPayload[0].Picture.replace(/(\r\n|\n|\r)/gm, "") + '");}';
+            document.getElementById('ControlPicturePlaceHolder').appendChild(style);
+            //add image Height to lock aspect ratio
             $('#outputCanvas').css('height', dataPayload[0].Height + '%');
+            //build the chart
             buildControlPicture(dataPayload);
         },
         error: function (result) {
+            //error in getting data
         }
+    });
+
+    //move to next point on each button click
+    $("#btn_next").click(function () {
+        $("#btn_next").html("Next item");
+        if (dataPayload[1][ActiveItem] == null) {
+            $("#btn_next").html("Click to start");
+            ActiveItem = 0;
+        }
+        ControlPlanChart.data.datasets[0].data[0] = dataPayload[1][ActiveItem];
+        ControlPlanChart.update();
+        ActiveItem += 1;
     });
 
 </script>
