--- a/EqUiWebUi/Areas/Welding/Views/Launch/ComparePitchV316.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Launch/ComparePitchV316.cshtml
@@ -1,44 +1,24 @@
-﻿
-@model IQueryable<EqUiWebUi.Areas.Welding.Models.ComparePitchV316>
+﻿@model IQueryable<EqUiWebUi.Areas.Welding.Models.ComparePitchV316>
 @{
     ViewBag.Title = "ComparePitchV316";
 }
 
-
-<h2>DoubleSpotCheck</h2>
-
 @Html.Grid(Model).Named("ComparePitchV316").Build(columns =>
-
 {
-    
-   
+    columns.Add(c => c.timerNumber).Titled("timernumber").Formatted("{0:dd-MM-yyyy HH:mm:ss}");
+    columns.Add(c => c.Timer).Titled("timer").InitialSort(GridSortOrder.Desc);
+    columns.Add(c => c.SpotID).Titled("spotidFromPitch");
  
-
-    columns.Add(c => c.timerNumber).Titled("TimerNumber");
-    columns.Add(c => c.lastWeldTime).Titled("lastWeldTime");
-   
-    columns.Add(c => c.AlternativeNumber).Titled("spotID");
-    columns.Add(c => c.Timer).Titled("Timer");
-    columns.Add(c => c.lastULControleTime).Titled("ULControl?").Formatted("{0:dd-MM-yyyy HH:mm:ss}");
+    columns.Add(c => c.AlternativeNumber).Titled("SpotInTimer");
+    columns.Add(c => c.lastWeldTime).Titled("Last30min_productionStatus").Formatted("{0:dd-MM-yyyy HH:mm:ss}");
+    columns.Add(c => c.lastULControleTime).Titled("lastULControleTime");
+    columns.Add(c => c.Expr1).Titled("variant");
 
 
-
-
-
-}).Css("css-classes").AppendCss("table-hover").Filterable().Pageable(pager =>
+}).Filterable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
-    pager.PageSizes = new Dictionary<Int32, String>
-    { { 0, "All" } };
-    //{ 20, "20" }, { 40, "40" }, { 80, "80" }, { 100, "100" } };
-    pager.ShowPageSizes = true;
-}
-    ).Sortable();
 
-@section scripts{
-    <script>
-            //full with screen
-            $("#allcontent").removeClass("body-content");
-            $("#allcontent").removeClass("container");
-    </script>
 }
+        ).Sortable().Css("table-hover").RowCss(model => model.AlternativeNumber != null ? "ani_PulseRed" : "");
+
