--- a/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Welding/Index.cshtml
@@ -113,8 +113,10 @@
             PJV
         <p>
             <a href="~/Welding/Welding/_AlertsUserRapport" class="btn btn-primary btn-sm">alerts Rapport&raquo;</a>
-           AlertsUser Rapport
+            AlertsUser Rapport
         </p>
+
+        @MyHtmlHelpers.EquiLink("/Welding/Ultralog/ListControlPlans", "far fa-file-alt", "List control plans", helperText: "Test with control plans")
 
     </div>
 </div>
