--- a/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
+++ b/EqUiWebUi/Areas/Welding/Views/Qteam/Index.cshtml
@@ -62,7 +62,7 @@
     </div>
     <p>
     <p>
-        <a href="~/Alert/Alert/Listalerts?h_alert-c_triggers.alert-type-contains=ULrapport&h_alert-rows=20" class="btn btn-primary btn-sm"> pss en spot positie alert &raquo;</a>
+        <a href="~/Alert/Alert/Listalerts?h_alert-c_triggers.alert-group-contains=UL&h_alert-rows=20" class="btn btn-primary btn-sm"> pss en spot positie alert &raquo;</a>
 
     <p></p>
 
@@ -84,12 +84,10 @@
             <a href="~/Welding/ULplan_start/Index" class="btn btn-primary btn-sm">Plan Busy&raquo;</a>
             Beheer van de DB plan busy list
             </p>
-            <a href="~/Welding/Welding/_AlertsUserRapport" class="btn btn-primary btn-sm">StoringsIngave&raquo;</a>
+            <a href="~/Welding/StoringsIngave/Index" class="btn btn-primary btn-sm">StoringsIngave&raquo;</a>
             Beheer van de StoringsIngaven
             </p>
-            <a href="~/Welding/Welding/_AlertsUserRapport" class="btn btn-primary btn-sm">SpotIdentMeasurements&raquo;</a>
-            Beheer van de SpotIdentMeasurements
-            </p>
+         
 
 
         </div>
