--- a/EqUiWebUi/Views/Home/Settings.cshtml
+++ b/EqUiWebUi/Views/Home/Settings.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Settings";
 }
 
-<h1>This is an Admin area!</h1>
+<p></p>
 
 @Html.Action("_settings", "EQUISetup", new { area = "" })
 
@@ -25,9 +25,9 @@
 <p></p>
 
 <div class="card">
-    <div class="card-header bg-warning">
+    <div class="card-header bg-dark">
         <h5 class="card-title text-white">
-            Tools
+            Tools (VCG)
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
