--- a/EqUiWebUi/Views/EQUISetup/_settings.cshtml
+++ b/EqUiWebUi/Views/EQUISetup/_settings.cshtml
@@ -1,6 +1,6 @@
 ﻿
 <div class="card">
-    <div class="card-header bg-danger">
+    <div class="card-header bg-dark">
         <h5 class="card-title text-white">
             EQUI site setup
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
@@ -8,18 +8,18 @@
     </div>
     <div class="card-body">
         <h4>Database connections</h4>
-        <p><a href="~/c_datasource/index" class="btn btn-primary btn-sm">c_datasource &raquo;</a>Manage database connections. (Alert sources)</p>
+        @MyHtmlHelpers.EquiLink("/c_datasource/index", "fas fa-database", "Database connections", helperText: "Manage database connections for jobmanager (ie: Alerts / background jobs) NOT the same as web.config connectionsstrings")
         <hr />
-        <h4>Datacollectors</h4>
-        <p><a href="~/vasc/vasc/index" class="btn btn-primary btn-sm">VASC &raquo;</a>Manage VASC (ABB datacollector)</p>
-        <p><a href="~/vwsc/vwsc/index" class="btn btn-primary btn-sm">VWSC &raquo;</a>Manage VWSC (BOSCH weldtimer datacollector)</p>
+        <h4>Data collectors</h4>
+        @MyHtmlHelpers.EquiLink("/vasc/vasc/index", "fas fa-server", "VASC setup", helperText: "Manage configuration for Volvo ABB service center")
+        @MyHtmlHelpers.EquiLink("/vwsc/vwsc/index", "fas fa-server", "VWSC setup", helperText: "Manage configuration for Volvo Welding service center")
         <hr />
-        <h4>Classification</h4>
-        <p><a href="~/Classification/ClassificationTool" class="btn btn-primary btn-sm">LogClassTool &raquo;</a>Tool for classification of errors (put errors in a class and subgroup)</p>
-        <p><a href="~/c_logclasssystem/Index" class="btn btn-warning btn-sm">c_Logclasssystem &raquo;</a>Manage classification systems</p>
-        <p><a href="~/c_LogclassRules/Index" class="btn btn-warning btn-sm">c_LogclassRules &raquo;</a>Manage classification rules</p>
-        <p><a href="~/c_Classification/Index" class="btn btn-warning btn-sm">c_Classification &raquo;</a>Manage classification (should be read for maximo)</p>
-        <p><a href="~/c_Subgroup/Index" class="btn btn-warning btn-sm">c_Subgroup &raquo;</a>Manage subgroups</p>
+        <h4>Data classification system</h4>
+        @MyHtmlHelpers.EquiLink("/Classification/ClassificationTool", "fas fa-random", "Classification tool", helperText: "Tool for classification of data (put data in a 'class' and 'subgroup' manualiy or by makeing classification rules)")
+        <p>@MyFilters.IconActionLink("/c_logclasssystem/Index", "fas fa-cogs", "Classification systems", "Manage classification systems")</p>
+        <p>@MyFilters.IconActionLink("/c_LogclassRules/Index", "fas fa-list-ul", "Classification rules", "Manage classification rules")</p>
+        <p>@MyFilters.IconActionLink("/c_Classification/Index", "fas fa-list-ul", "Classes", "Manage classification 'classes'")</p>
+        <p>@MyFilters.IconActionLink("/c_Subgroup/Index", "fas fa-list-ul", "Subgroups", "Manage classification 'subgroups'")</p>
     </div>
 </div>
 
